# data-centric-ai-hackathon

./: .gitignore  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
notebooks/: example-clustering.ipynb  example-naive-annotations.ipynb  solution-clustering.ipynb  your-solution.ipynb
notebooks/dev/: example-naive-annotations.ipynb
src/dcai/: dataset.py  model.py  score.py  validation.py
